--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,8 +71,8 @@ android {
         allWarningsAsErrors = true
     }
 
-    viewBinding {
-        enabled = true
+    buildFeatures {
+        viewBinding = true
     }
 
     packagingOptions {
