--- a/common/build.gradle
+++ b/common/build.gradle
@@ -38,8 +38,8 @@ android {
         allWarningsAsErrors = true
     }
 
-    viewBinding {
-        enabled = true
+    buildFeatures {
+        viewBinding = true
     }
 
     testOptions {
