--- a/trustchain-explorer/build.gradle
+++ b/trustchain-explorer/build.gradle
@@ -45,8 +45,8 @@ android {
         allWarningsAsErrors = true
     }
 
-    viewBinding {
-        enabled = true
+    buildFeatures {
+        viewBinding = true
     }
 }
 
