--- a/musicdao/build.gradle
+++ b/musicdao/build.gradle
@@ -47,7 +47,6 @@ android {
 dependencies {
     implementation project(':common')
     implementation project(':ipv8-android')
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation "androidx.preference:preference:1.1.0"
@@ -60,9 +59,15 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
-    implementation 'com.turn:ttorrent-core:1.5'
     implementation 'com.google.android:flexbox:2.0.1'
-   implementation('com.github.TorrentStream:TorrentStream-Android:2.5.0') {
+
+    implementation 'com.turn:ttorrent-core:1.5'
+    implementation('com.github.TorrentStream:TorrentStream-Android:2.6.1') {
         exclude group: 'com.frostwire'
     }
+
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.10.5'
+    implementation 'com.google.android.exoplayer:exoplayer-dash:2.10.5'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.10.5'
+    implementation 'com.google.android.exoplayer:exoplayer-hls:2.10.5'
 }
