--- a/musicdao/build.gradle
+++ b/musicdao/build.gradle
@@ -62,9 +62,7 @@ dependencies {
     implementation 'com.google.android:flexbox:2.0.1'
 
     implementation 'com.turn:ttorrent-core:1.5'
-    implementation('com.github.TorrentStream:TorrentStream-Android:2.6.1') {
-        exclude group: 'com.frostwire'
-    }
+//    implementation files('libs/torrenstream-android.aar')
 
     implementation 'com.google.android.exoplayer:exoplayer-core:2.10.5'
     implementation 'com.google.android.exoplayer:exoplayer-dash:2.10.5'
