--- a/musicdao/build.gradle
+++ b/musicdao/build.gradle
@@ -47,13 +47,14 @@ android {
 dependencies {
     implementation project(':common')
     implementation project(':ipv8-android')
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation "androidx.preference:preference:1.1.1"
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -68,6 +69,9 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.10.5'
     implementation 'com.google.android.exoplayer:exoplayer-hls:2.10.5'
 
+    // Cryptocurrency integration
     implementation 'org.bitcoinj:bitcoinj-core:0.15.7'
     implementation 'com.google.guava:guava:29.0-android'
+    implementation 'org.knowm.xchange:xchange-parent:5.0.1'
+    implementation 'org.knowm.xchange:xchange-binance:5.0.1'
 }
