--- a/musicdao/build.gradle
+++ b/musicdao/build.gradle
@@ -64,7 +64,12 @@ android {
 
 dependencies {
     implementation project(':common')
+    implementation project(':ipv8')
+    implementation project(':ipv8-android')
+
     testImplementation project(':common')
+    testImplementation project(':ipv8')
+    testImplementation project(':ipv8-android')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -95,4 +100,18 @@ dependencies {
 
     // Crypto library for testing
     testImplementation "com.goterl.lazycode:lazysodium-java:4.2.4"
+
+    // Testing
+    testImplementation 'junit:junit:4.12'
+    testImplementation "io.mockk:mockk:1.9.3"
+    testImplementation "com.squareup.sqldelight:sqlite-driver:$sqldelight_version"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3'
 }
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    kotlinOptions.freeCompilerArgs += [
+        "-Xuse-experimental=kotlin.Experimental,kotlin.ExperimentalUnsignedTypes",
+        "-Werror" // Set Kotlin compiler warnings as errors
+    ]
+}
+
