--- a/musicdao/build.gradle
+++ b/musicdao/build.gradle
@@ -64,12 +64,7 @@ android {
 
 dependencies {
     implementation project(':common')
-    implementation project(':ipv8')
     implementation project(':ipv8-android')
-
-    testImplementation project(':common')
-    testImplementation project(':ipv8')
-    testImplementation project(':ipv8-android')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -106,6 +101,7 @@ dependencies {
     testImplementation "io.mockk:mockk:1.9.3"
     testImplementation "com.squareup.sqldelight:sqlite-driver:$sqldelight_version"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3'
+    testImplementation "org.robolectric:robolectric:3.4.2"
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
