--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,9 +9,10 @@ apply plugin: 'com.google.firebase.crashlytics'
 buildscript {
     repositories {
         google()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.0.0'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.3.0'
     }
 }
 
@@ -115,8 +116,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     // Firebase
-    implementation 'com.google.firebase:firebase-analytics:17.4.0'
-    implementation 'com.google.firebase:firebase-crashlytics:17.0.0'
+    implementation 'com.google.firebase:firebase-analytics:17.5.0'
+    implementation 'com.google.firebase:firebase-crashlytics:17.2.2'
 
     // Material
     implementation 'com.google.android.material:material:1.1.0'
