--- a/peerchat/build.gradle
+++ b/peerchat/build.gradle
@@ -86,6 +86,8 @@ dependencies {
 
     implementation 'com.mattskala:itemadapter:0.3'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     // Testing
