--- a/common/build.gradle
+++ b/common/build.gradle
@@ -83,11 +83,13 @@ dependencies {
     implementation 'com.mattskala:itemadapter:0.3'
 
     // BitTorrent
-    api files('libs/jlibtorrent-1.2.10.0.jar')
-    api files('libs/jlibtorrent-android-arm64-1.2.10.0.jar')
-    api files('libs/jlibtorrent-android-arm-1.2.10.0.jar')
-    api files('libs/jlibtorrent-android-x86-1.2.10.0.jar')
-    api files('libs/jlibtorrent-android-x86_64-1.2.10.0.jar')
+    api files('libs/jlibtorrent-1.2.5.0.jar')
+    api files('libs/jlibtorrent-android-arm64-1.2.5.0.jar')
+    api files('libs/jlibtorrent-android-arm-1.2.5.0.jar')
+    api files('libs/jlibtorrent-android-x86-1.2.5.0.jar')
+    api files('libs/jlibtorrent-android-x86_64-1.2.5.0.jar')
+
+//    implementation 'com.github.TorrentStream:TorrentStream-Android:07f97b8'
 
     //This AAR dependency also contains jlibtorrent
     api files('libs/torrentstream-android.jar')
