--- a/common/build.gradle
+++ b/common/build.gradle
@@ -68,6 +68,8 @@ android {
 
 repositories {
     maven { url "https://dl.bintray.com/terl/lazysodium-maven" }
+    mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -103,6 +105,19 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
+    // secp256k1 crypto
+    implementation 'com.madgag.spongycastle:core:1.58.0.0'
+    implementation 'com.madgag.spongycastle:prov:1.58.0.0'
+
+    // JWT
+    implementation 'org.wso2.orbit.com.nimbusds:nimbus-jose-jwt:9.18.0.wso2v1'
+
+    // Multibase encoding
+    implementation 'com.github.multiformats:java-multibase:1.1.0'
+
+    // Networking
+    implementation 'com.android.volley:volley:1.2.0'
 
     // Logging
     implementation 'io.github.microutils:kotlin-logging:1.7.7'
