--- a/literaturedao/build.gradle
+++ b/literaturedao/build.gradle
@@ -5,7 +5,6 @@ plugins {
 
 android {
     compileSdk 29
-
     defaultConfig {
         minSdkVersion 22
         targetSdk 29
@@ -55,4 +54,5 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
 }
