--- a/atomic-swap/build.gradle
+++ b/atomic-swap/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     implementation 'androidx.preference:preference-ktx:1.1.0'
 
     implementation 'com.github.MattSkala:recyclerview-itemadapter:0.4'
+    implementation 'androidx.core:core-ktx:+'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
