--- a/literaturedao/build.gradle
+++ b/literaturedao/build.gradle
@@ -84,6 +84,7 @@ dependencies {
     // File io
     implementation 'commons-io:commons-io:2.11.0'
     implementation 'com.squareup.okhttp3:okhttp:4.1.0'
+    implementation 'androidx.core:core-ktx:+'
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
