--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -187,7 +187,7 @@
             android:exported="false" />
 
         <service
-            android:name="nl.tudelft.trustchain.detoks.GossiperService"
+            android:name="nl.tudelft.trustchain.detoks.gossiper.GossiperService"
             android:enabled="true"
             android:exported="false" />
 
