--- a/offlinemoney/src/main/AndroidManifest.xml
+++ b/offlinemoney/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
-        <activity android:name=".MainActivityOfflineMoney"></activity>
+        <activity android:name=".MainActivityOfflineMoney" />
     </application>
 
 </manifest>
