--- a/musicdao/build.gradle
+++ b/musicdao/build.gradle
@@ -176,6 +176,9 @@ dependencies {
     implementation("com.google.code.gson:gson:2.8.9")
     implementation("org.apache.commons:commons-csv:1.9.0")
 
+    //JGraphT
+    implementation "org.jgrapht:jgrapht-core:1.5.1"
+    implementation "org.jgrapht:jgrapht-io:1.5.1"
 }
 
 repositories {
